# vida_py

./: .codespell_ignore_words  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ECUs.md  K-Line.md  README.md  create_vehicle_config.py  dump_tables.py  get_blocks.py  get_profile.py  model_info.py  parse_vida_tables.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sql_funcs.py  sql_to_py.py
.github/: ISSUE_TEMPLATE.md
PyVIDA/: carcom.py  database.py  decode_vin.py  diag.py  get_document.py  get_ecu_blocks.py  get_profile_documents.py
examples/: bytes_fo_file.py  create_log_config_for_ecus.py  create_log_config_for_vin.py  decode_vin.py  get_compatible_profiles.py  get_document.py  get_ecu_addresses.py  get_ecu_info.py  get_ecu_log_params.py  get_ecu_services.py  get_ecus_for_vin.py  get_image.py  get_part_info.py  get_profile_documents.py  get_profiles_for_vin.py  get_script.py  get_service.py  get_vehcom_scripts.py
schemas/: AccessServer.csv  DiagSwdlRepository.csv  DiagSwdlSession.csv  DiceTiming.csv  EPC.csv  basedata.csv  carcom.csv  headers.csv  imagerepository.csv  servicerep_en-US.csv
scripts/: schema_to_py_class.py  sql_funcs_to_py.py  sql_scripts_to_py.py  tables_to_csv.py
tests/: test_basedata_models.py  test_carcom_models.py  test_service_models.py  test_timing_models.py  test_vida_py.py
vehicles/: 2004 V70 B5254T4 - Conf.json  2004 V70 B5254T4 - Scripts.json  2004 XC70 B5254T2 - Conf.json  2004 XC70 B5254T2 - Scripts.json  2005 V70 B5254T4 - Conf.json  2005 V70 B5254T4 - Scripts.json  (+2 more)
vida_py/: db.py  (+1 more)
(+57 files in other folders)
