[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_vida"
version = "1.0"
description = "Python interface for Volvo's VIDA databases."
readme = "README.md"
authors = [
  {name = "Kestin Goforth", email = "kgoforth1503@gmail.com"}
]
maintainers = [
  {name = "Kestin Goforth", email = "kgoforth1503@gmail.com"}
]
classifiers = [

]
license = {text = "AGPL-3.0"}
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/kForth/py_vida/issues"
homepage = "https://github.com/kForth/py_vida"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
{{cookiecutter.slug}} = "{{cookiecutter.slug}}.cli:app"

[tool.black]
line-length = 90
include = '''
(
    (
        py_vida
      | .github
    ).*\.pyi?$
)|(
    setup\.py
)
'''
